[tool.poetry]
name = "mojo-runtime"
description = "Automation Mojo Runtime Module (mojo-runtime)"
version = "1.3.29"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.md"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-runtime"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
coverage = "^7.0.4"
mojo-collections = ">=1.3.16 <1.4.0"
mojo-config = ">=1.3.21 <1.4.0"
mojo-xmodules = ">=1.3.23 <1.4.0"
mojo-errors = ">=1.3.9 <1.4.0"
mojo-extension = ">=1.3.19 <1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
